.infrastructure/k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-local
  labels:
    larakube.io/project: dashboard
    larakube.io/managed-by: larakube
